--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <div class="wrapper sticky-top">
       <div class="container py-3 text-dark">
           <div class="row navigation">
-              <div class="col-3 mx-auto col-sm-3 mx-sm-auto col-md-1 col-lg-1 col-xl-1 col-xxl-1">
+              <div class="col-3 mx-auto col-sm-2 col-md-1 col-lg-1 col-xl-1 col-xxl-1">
                   <img src="nav_icon.png" alt="Logo" class="logo img-fluid">
               </div>
 
-              <div class="col-12 col-sm-12 col-md-6 col-lg-5 col-xl-4 col-xxl-4">
+              <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-4 col-xxl-4">
                   <h1 class="text-uppercase fw-bold fs-2 ps-2 text-center">movies just for you</h1>
               </div>
 
-              <div class="col-12 text-center col-sm-12 text-sm-center offset-md-4 col-md-1 text-md-end
+              <div class="col-12 text-center col-sm-1 offset-md-4 col-md-1 text-md-end
               offset-lg-5 col-lg-1 text-lg-end offset-xl-6 col-xl-1 text-xl-end offset-xll-6 col-xll-1 text-xll-end">
                   <a class="github" target="_blank" href="https://github.com/alexstev985">
                       <i class="fab fa-github fa-2x"></i>
